# fynance

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  prompts.md
backend/: Cargo.toml  README.md  RUNNING.md
backend/config/: categories.yaml
backend/config/prompts/: statement_parser.txt
backend/src/: cli.rs  lib.rs  main.rs  model.rs  util.rs
backend/src/commands/: account.rs  budget.rs  import.rs  mod.rs  serve.rs  stats.rs  token.rs
backend/src/importers/: csv_importer.rs  llm_parser.rs  mod.rs  unified.rs
backend/src/server/: auth.rs  error.rs  mod.rs  state.rs  static_files.rs  validation.rs
backend/src/server/routes/: accounts.rs  budget.rs  categories.rs  docs.rs  health.rs  holdings.rs  import_api.rs  ingestion.rs  mod.rs  portfolio.rs  profiles.rs  sections.rs  transactions.rs
backend/src/storage/: db.rs  mod.rs
backend/tests/: import_csv.rs  llm_parser_live.rs  server_smoke.rs
backend/tests/fixtures/: garbage.csv  lloyds.csv  lloyds.expected.json  monzo.csv  monzo.expected.json  revolut.csv  revolut.expected.json  unknown_bank.csv  unknown_bank.expected.json
db/: README.md
design/: 01_ui_approaches.md  02_architecture.md  03_data_model.md  05_security_isolation.md
docs/: PORTFOLIO_AND_HOLDINGS_BREAKDOWN.md  entity-relations.md  frontend-backend-handover.md  frontend-review.md  fynance-project-note.md  prompts.md  stretch-goals.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
plans/: 01_architecture.md  02_data_model.md  03_importer.md  04_categorizer.md  (+5 more)
(+178 files in other folders)
