[package]
name = "fynance"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Local-first personal finance tracker"
license = "MIT"

[[bin]]
name = "fynance"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
csv = "1"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
regex = "1"
sha2 = "0.10"
hex = "0.4"
indicatif = "0.17"
dirs = "5"
dotenvy = "0.15"
ts-rs = { version = "10", features = ["serde-compat", "chrono-impl"] }
axum = { version = "0.7", features = ["multipart", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
include_dir = "0.7"
open = "5"
rand = "0.8"
mime_guess = "2"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
